--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Johnson - Full Stack Developer | CV & Portfolio</title>
+    <title>Jasanth Santhakumar - Construction engineering | CV & Portfolio</title>
     <meta name="description" content="Experienced full stack developer specializing in React, TypeScript, and modern web technologies. View my portfolio and CV." />
     <meta name="author" content="Alex Johnson" />
     <meta name="keywords" content="full stack developer, react developer, typescript, web development, portfolio, CV" />
