--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jasanth Santhakumar - Construction engineering | CV & Portfolio</title>
-    <meta name="description" content="Experienced full stack developer specializing in React, TypeScript, and modern web technologies. View my portfolio and CV." />
-    <meta name="author" content="Alex Johnson" />
-    <meta name="keywords" content="full stack developer, react developer, typescript, web development, portfolio, CV" />
+    <title>Jasanth Santhakumar - Structural engineering | CV & Portfolio</title>
+    <meta name="description" content="Civil engineering graduate with passion for structural engineering . View my portfolio and CV." />
+    <meta name="author" content="Jasanth Santhakumar" />
+    <meta name="keywords" content="Structural engineer, portfolio, CV" />
 
-    <meta property="og:title" content="Alex Johnson - Full Stack Developer Portfolio" />
-    <meta property="og:description" content="Professional portfolio showcasing modern web development projects and expertise in React, TypeScript, and full stack technologies." />
+    <meta property="og:title" content="Jasanth Santhakumar - Structural engineer Portfolio" />
+    <meta property="og:description" content="Professional portfolio showcasing structural engineering projects and expertise in Revit, AutoCad, Novapoint." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:title" content="Alex Johnson - Full Stack Developer" />
-    <meta name="twitter:description" content="Professional portfolio showcasing modern web development projects" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Jasanth Santhakumar portfolio" />
+    <meta name="twitter:description" content="Professional portfolio showcasing structural engineering projects" />
   </head>
 
   <body>
